--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <nav
             class="navbar navbar-expand-lg navbar-light bg-transparent pt-5"
           >
-            <h2 class="logo" href="#">Startup 3</h2>
+            <h2 class="logo pr-lg-5" href="#">Startup 3</h2>
             <button
               class="navbar-toggler"
               type="button"
@@ -31,30 +31,30 @@
               aria-expanded="false"
               aria-label="Toggle navigation"
             >
-              <span class="material-symbols-outlined pt-1"> menu </span>
+            <i class="fa-solid fa-burger fa-bounce"></i>
             </button>
 
             <div
               class="collapse navbar-collapse hero4-link"
               id="navbarSupportedContent"
             >
-              <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                  <a class="nav-link active" href="#">Overview</a>
+              <ul class="navbar-nav ml-lg-auto">
+                <li class="nav-item ">
+                  <a class="nav-link active " href="#">Overview</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link mr-2" href="#">Features</a>
+                  <a class="nav-link" href="#">Features</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link mr-2" href="#">Company</a>
+                  <a class="nav-link" href="#">Company</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link mr-2" href="#">Platform</a>
+                  <a class="nav-link" href="#">Platform</a>
                 </li>
               </ul>
               <button
                 type="button"
-                class="btn-ani btn-sign bg-transparent badge-pill px-4 py-2 ml-lg-3"
+                class="btn-ani btn-sign bg-transparent badge-pill px-4 py-2 ml-lg-4"
               >
                 Purchase
               </button>
@@ -114,7 +114,7 @@
                   look fantastic.
                 </p>
               </div>
-              <div class="features-img text-center pr-lg-4 pt-3">
+              <div class="features-img text-center pr-lg-4">
                 <img src="./image/image2.png"  alt="">
               </div>
             </div>
@@ -122,64 +122,16 @@
          <div class="col-sm-12 col-md-12 col-lg-2 col-xl-2"></div>
         </div>
       </div>
+
       <div class="content3">
         <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-2 col-xl-2"></div>
         <div class="col-sm-12 col-md-12 col-lg-10 col-xl-10">
           <div class="row">
-        <div class="col-sm-12 col-md-12 col-lg-7 col-xl-7">
-
-          <div class="accordion my-3 py-5" id="content3">
-            <div class="card1">
-              <div class="card-header" id="headingOne">
-                <h2 class="mb-0">
-                  <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    Easy To Use 
-                  </button>
-                </h2>
-              </div>
-          
-              <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#content3">
-                <div class="card-body">
-                  Startup Framework contains components and complex blocks which can easily be integrated into any design. All of the components are made in the same style, and can easily be integrated into projects, allowing you to create hundreds of solutions.
-                </div>
-              </div>
-            </div>
-            <div class="card1">
-              <div class="card-header" id="headingTwo">
-                <h2 class="mb-0">
-                  <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    Variety of Designs
-                  </button>
-                </h2>
-              </div>
-              <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#content3">
-                <div class="card-body">
-                  Startup Framework contains components and complex blocks which can easily be integrated into any design. All of the components are made in the same style, and can easily be integrated into projects, allowing you to create hundreds of solutions.
-                </div>
-              </div>
-            </div>
-            <div class="card1">
-              <div class="card-header" id="headingThree">
-                <h2 class="mb-0">
-                  <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    Feel our Design
-                  </button>
-                </h2>
-              </div>
-              <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#content3">
-                <div class="card-body">
-                  Startup Framework contains components and complex blocks which can easily be integrated into any design. All of the components are made in the same style, and can easily be integrated into projects, allowing you to create hundreds of solutions.
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </div>
-        <div class="col-sm-12 col-md-12 offset-1 col-lg-2 mt-lg-5 pt-lg-4">
-          <div class="content3-text mr-lg-3">
-            <h2> Have a question?</h2>
-            <p>Startup Framework includes great form options for your startup projects.</p>
+          <div class="col-sm-12 col-md-12 offset-lg-1 col-lg-2 mt-5 pt-4 order-lg-2">
+          <div class="content3-text mr-lg-3 text-center text-lg-left order-1">
+            <h2 class="pb-lg-4" > Have a question?</h2>
+            <p class="my-lg-3" >Startup Framework includes great form options for your startup projects.</p>
             <a href="#">
               <button
                 type="button"
@@ -189,7 +141,55 @@
               </button>
             </a>
           </div>
-        </div>
+           </div>
+           <div class="col-sm-12 col-md-12 col-lg-7 col-xl-7">
+            <div class="accordion my-3 py-lg-5" id="content3">
+              <div class="card1">
+                <div class="card-header" id="headingOne">
+                  <h2 class="mb-0">
+                    <button class="btn btn-link btn-block text-center text-lg-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                      Easy To Use 
+                    </button>
+                  </h2>
+                </div>
+            
+                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#content3">
+                  <div class="card-body">
+                    Startup Framework contains components and complex blocks which can easily be integrated into any design. All of the components are made in the same style, and can easily be integrated into projects, allowing you to create hundreds of solutions.
+                  </div>
+                </div>
+              </div>
+              <div class="card1">
+                <div class="card-header" id="headingTwo">
+                  <h2 class="mb-0">
+                    <button class="btn btn-link btn-block text-center text-lg-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                      Variety of Designs
+                    </button>
+                  </h2>
+                </div>
+                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#content3">
+                  <div class="card-body">
+                    Startup Framework contains components and complex blocks which can easily be integrated into any design. All of the components are made in the same style, and can easily be integrated into projects, allowing you to create hundreds of solutions.
+                  </div>
+                </div>
+              </div>
+              <div class="card1 mb-4">
+                <div class="card-header" id="headingThree">
+                  <h2 class="mb-0">
+                    <button class="btn btn-link btn-block text-center text-lg-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                      Feel our Design
+                    </button>
+                  </h2>
+                </div>
+                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#content3">
+                  <div class="card-body">
+                    Startup Framework contains components and complex blocks which can easily be integrated into any design. All of the components are made in the same style, and can easily be integrated into projects, allowing you to create hundreds of solutions.
+                  </div>
+                </div>
+              </div>
+            </div>
+  
+          </div>
           </div>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-2 col-xl-2"></div>
