--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="col-sm-12 col-md-12 col-lg-2 col-xl-2"></div>
         <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8">
           <nav
-            class="navbar navbar-expand-lg navbar-light bg-transparent pt-5"
+            class="navbar navbar-expand-lg navbar-light bg-transparent pt-4"
           >
             <h2 class="logo pr-lg-5" href="#">Startup 3</h2>
             <button
@@ -42,26 +42,29 @@
                 <li class="nav-item ">
                   <a class="nav-link active " href="#">Overview</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item ml-lg-3">
                   <a class="nav-link" href="#">Features</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item ml-lg-3">
                   <a class="nav-link" href="#">Company</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item ml-lg-3">
                   <a class="nav-link" href="#">Platform</a>
+                </li>
+                <li class="nav-item d-lg-none">
+                  <a class="nav-link" href="#">Purchase</a>
                 </li>
               </ul>
               <button
                 type="button"
-                class="btn-ani btn-sign bg-transparent badge-pill px-4 py-2 ml-lg-4"
+                class="btn-ani btn-sign bg-transparent badge-pill px-4 py-2 ml-lg-4 d-none d-lg-block"
               >
                 Purchase
               </button>
             </div>
           </nav>
           <div
-            class="hero-content d-lg-flex justify-content-between align-items-center mt-4"
+            class="hero-content d-lg-flex justify-content-between align-items-center mt-5"
           >
             <div class="content-left">
               <h1 class="heading text-lg-left">
