--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               aria-expanded="false"
               aria-label="Toggle navigation"
             >
-            <i class="fa-solid fa-burger fa-bounce"></i>
+            <i class="fa-solid fa-laptop-code fa-bounce"></i>
             </button>
 
             <div
@@ -83,7 +83,7 @@
                 <a href="#">
                   <button
                     type="button"
-                    class="btn-ani badge-pill py-3 px-4 my-4"
+                    class="signupbtn btn-ani badge-pill py-3 px-4 my-4"
                   >
                     Explore Design
                   </button>
@@ -93,7 +93,7 @@
             <div class="content-right text-center ml-lg-5">
               <img
                 src="./image/Rectangle.png"
-                alt="page4 img"
+                alt="page4 img" class="img-fluid"
               />
             </div>
           </div>
@@ -138,7 +138,7 @@
             <a href="#">
               <button
                 type="button"
-                class="btn-ani badge-pill py-3 px-4 my-2"
+                class="signupbtn btn-ani badge-pill py-3 px-4 my-2"
               >
                 Get Help
               </button>
